welcome page spacing fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -7500,7 +7500,7 @@ input.contains-error {
   margin: 0 0 2rem;
 }
 
-/* line 22, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
+/* line 23, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
 .benefits-highlights {
   background: #4aa564;
   color: white;
@@ -7512,26 +7512,48 @@ input.contains-error {
   content: "";
   display: block;
 }
-/* line 28, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
+/* line 29, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
+.benefits-highlights > div + div {
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  margin-top: 3rem;
+  padding-top: 3rem;
+}
+@media screen and (min-width: 600px) {
+  /* line 29, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
+  .benefits-highlights > div + div {
+    border-top: none;
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
+/* line 41, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
 .benefits-highlights h2,
 .benefits-highlights h3 {
   margin-top: 0;
 }
+/* line 46, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
+.benefits-highlights h3 {
+  margin-bottom: 0;
+}
+/* line 49, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
+.benefits-highlights h3 + p {
+  margin-top: 0;
+}
 
-/* line 34, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
+/* line 55, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
 .styled-numbered-list {
   margin: 0;
   padding: 1rem 0 0 0;
   list-style-type: none;
 }
-/* line 39, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
+/* line 60, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
 .styled-numbered-list > li {
   counter-increment: step-counter;
   position: relative;
   padding-left: 5.2rem;
   margin-bottom: 3rem;
 }
-/* line 45, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
+/* line 66, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
 .styled-numbered-list > li:before {
   border-radius: 50%;
   content: counter(step-counter);
@@ -7547,7 +7569,7 @@ input.contains-error {
   height: 40px;
 }
 @media screen and (min-width: 600px) {
-  /* line 45, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
+  /* line 66, /Users/irs/work/benefits-enrollment-demo/app/assets/stylesheets/benefits_enrollment/components/_welome_page.scss */
   .styled-numbered-list > li:before {
     top: -1rem;
   }
